--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "madhukar-portfolio",
-  "homepage": "https://madhukarhonnekar.github.io/madhukar_honnekar/",
+  "homepage": "https://madhukarhonnekar.github.io/madhukarhonnekar/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
